src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBSparseBuffer_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBSparseBuffer_StringErrorContext.class */
public final class ARBSparseBuffer_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBufferPageCommitmentARB(IJJZ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSparseBufferErrorContext");
        methods.put("glNamedBufferPageCommitmentEXT(IJJZ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSparseBufferErrorContext");
        methods.put("glNamedBufferPageCommitmentARB(IJJZ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSparseBufferErrorContext");
        return methods;
    }
}
